@@ -1,3 +1,8 @@
+2005-10-18  Chong Yidong  <cyd@stupidchicken.com>
+
+	* image.el (create-image, find-image): Mention max-image-size in
+	docstring.
+
 2005-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* textmodes/conf-mode.el: Don't use font-lock-defaults-alist.
